<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.AppCompat.Light.NoActionBar"
    tools:context=".HomeActivity"
    android:orientation="vertical">

<!--    <ScrollView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent">-->

    <androidx.cardview.widget.CardView
        android:id="@+id/cardtop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@color/com_facebook_button_send_background_color_pressed"
        android:elevation="5dp"
        app:cardCornerRadius="10dp">
        >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@null"
            android:hint="@string/search"
            />
    </androidx.cardview.widget.CardView>



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/All"
            android:textColor="@color/black"
            android:background="@drawable/roundstyle"></Button>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/Grammar"
            android:textColor="@color/black"
            android:background="@drawable/roundstyle"></Button>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/Spelling"
            android:textColor="@color/black"
            android:background="@drawable/roundstyle"></Button>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/TimeinEnglish"
            android:textColor="@color/black"
            android:background="@drawable/roundstyle"></Button>
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardone"
        android:layout_width="match_parent"
        android:layout_height="@dimen/cardViewSize"
        android:layout_margin="15dp"
        app:cardBackgroundColor="#86DC3D"
        android:elevation="5dp"
        app:cardCornerRadius="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:src="@drawable/fruits"
            android:background="@null"
            android:layout_margin="10dp"
            android:id="@+id/img"
            android:contentDescription="@string/app_name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@null"
            android:textStyle="bold"
            android:text="@string/Vegetable"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@null"
            android:text="@string/Vegetable200"/>
    </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardtwo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/cardViewSize"
        android:layout_margin="15dp"
        app:cardBackgroundColor="#fffacd"
        android:elevation="5dp"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:src="@drawable/trans"
            android:id="@+id/img1"
            android:contentDescription="@string/app_name" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@null"
                android:textStyle="bold"
                android:text="@string/Trans"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@null"
                android:text="@string/Trans145"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardthree"
        android:layout_width="match_parent"
        android:layout_height="@dimen/cardViewSize"
        android:layout_margin="15dp"
        app:cardBackgroundColor="#fae2e3"
        android:elevation="5dp"
        app:cardCornerRadius="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:src="@drawable/animals"
            android:layout_margin="10dp"
            android:id="@+id/img2"
            android:contentDescription="@string/app_name" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="10dp"
                android:textStyle="bold"
                android:background="@null"
                android:text="@string/Animals"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@null"
                android:text="@string/Animals436"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>
<!--    </ScrollView>-->

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        app:menu="@menu/menunavigation" />

</LinearLayout>