<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/GfG_full_logo"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/signnew"/>


    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/LearnEnglish"
        android:textSize="30dp"
        android:textStyle="bold"></TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:textSize="30dp"
        android:textStyle="bold"
        android:text="@string/LearnEnglish2"></TextView>

    <androidx.cardview.widget.CardView
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@color/com_facebook_button_send_background_color_pressed"
        android:elevation="5dp"
        app:cardCornerRadius="10dp">
        >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@null"
            android:hint="@string/email"
            />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@color/com_facebook_button_send_background_color_pressed"
        android:elevation="5dp"
        app:cardCornerRadius="10dp">
        >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@null"
            android:inputType="textPassword"
            android:hint="@string/password"
            />
    </androidx.cardview.widget.CardView>




    <com.facebook.login.widget.LoginButton
        android:id="@+id/login_button"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        tools:ignore="MissingConstraints"
        android:layout_marginBottom="30dp" />

</LinearLayout>