<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/GfG_full_logo"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/subscribenew"/>


    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/getUnlimited"
        android:textSize="30dp"
        android:textStyle="bold"></TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:textSize="30dp"
        android:textStyle="bold"
        android:text="@string/access"></TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardleft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/com_facebook_button_send_background_color_pressed"
            android:elevation="5dp"
            app:cardCornerRadius="10dp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@null"
                    android:hint="@string/d9.9"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@null"
                    android:hint="@string/d9.9permonth"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:background="@null"
                    android:hint="@string/d80peryeer"/>
            </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardright"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/com_facebook_button_send_background_color_pressed"
            android:elevation="5dp"
            app:cardCornerRadius="10dp">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:background="@null"
                    android:hint="@string/d3.9"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:background="@null"
                    android:hint="@string/d3.9permonth"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:background="@null"
                    android:hint="@string/d60peryeer"
                    />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</LinearLayout>
